--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -3,12 +3,9 @@
 <div *ngFor="let product of products">
 
   <!-- insert content here -->
-  <h3>{{product.name}}</h3>
+  <h3>
+    {{product.name}}
+  </h3>
 
 </div>
 
-<!-- 
-Copyright Google LLC. All Rights Reserved.
-Use of this source code is governed by an MIT-style license that
-can be found in the LICENSE file at http://angular.io/license
--->
