product-alerts component added

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -20,6 +20,11 @@
     Share
   </button>
 
+  <!-- Include product alert here -->
+  <app-product-alerts
+    [product]="product">
+  </app-product-alerts>
+
 </div>
 
 
