--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -22,7 +22,8 @@
 
   <!-- Include product alert here -->
   <app-product-alerts
-    [product]="product">
+    [product]="product"
+    (notify)="onNotify()">
   </app-product-alerts>
 
 </div>
