--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,11 +1,11 @@
 <h2>Products</h2>
 
 <!-- this repeats -->
-<div *ngFor="let product of products">
+<div *ngFor="let product of products; index as productId">
 
   <!-- insert content here -->
   <h3>
-    <a [title]="product.name + ' detailzzz'">
+    <a [title]="product.name + ' detailzzz'" [routerLink]="['/products', productId]" >
       {{product.name}}
     </a>
   </h3>
